[package]
name = "hysteria-obfs"
version.workspace = true
description = "Packet obfuscation layers for Hysteria 2"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake2.workspace = true
getrandom.workspace = true

[lints]
workspace = true
