[package]
name = "hysteria-realm"
version.workspace = true
description = "Hysteria Realm rendezvous and NAT traversal"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
futures.workspace = true
getrandom.workspace = true
igd-next.workspace = true
natpmp.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "sync", "time"] }
url.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
